[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awsipenum"
version = "0.1.1"
authors = [
  { name="Steve Melo", email="momelod@gmail.com" },
]
description = "List your AWS IPs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/momelod/awsipenum"
