[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "awsipenum"
version = "0.1.11"
authors = [
  { name="Steve Melo", email="momelod@gmail.com" },
]
description = "List your AWS IPs"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'boto3', 
    'botocore', 
    'ipaddress', 
    'requests', 
    'pyaml'
]
dynamic = ["entry-points"]

[project.urls]
"Repository" = "https://github.com/momelod/awsipenum"
